apps/hass/codeserver/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
  namespace: hass
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: codeserver
          image: ghcr.io/coder/code-server:4.141.0@sha256:72ab24b5680ee597dd647b30d82625752f40109b5f61bef90ffbf1ea1f02dbb8
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: codeserver
              mountPath: /home/coder
              subPath: config
            - name: codeserver
              mountPath: /home/source-repos
              subPath: repos
            - name: tmp
              mountPath: /tmp
            - name: appdaemon-data
              mountPath: /home/appdaemon-data
              subPath: conf
            - name: hass-data
              mountPath: /home/hass-data
            - name: zwave-data
              mountPath: /home/zwave-data
          resources:
            requests:
              memory: 1Gi
              cpu: "20m"
            limits:
              memory: 1Gi
          livenessProbe: &probe
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
          readinessProbe: *probe
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
      volumes:
        - name: codeserver
          persistentVolumeClaim:
            claimName: codeserver-pvc
        - name: appdaemon-data
          persistentVolumeClaim:
            claimName: appdaemon-pvc
        - name: hass-data
          persistentVolumeClaim:
            claimName: hass-pvc
        - name: zwave-data
          persistentVolumeClaim:
            claimName: zwave-pvc
        - name: tmp
          emptyDir: {}
